--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "discord.js": "^12.2.0",
     "glob": "^7.1.6",
     "path": "^0.12.7",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "jimp": "^0.16.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.10.15",
+    "diff": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "ms": "^2.1.2"
   }
 }
